// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lastfmIntegration.vue > renders proper content with Last.fm integration status false, current user admin status false 1`] = `
<section data-v-70c5cabe="">
  <h3 data-v-70c5cabe="" class="text-2xl mb-2"><span data-v-70c5cabe="" class="mr-2 text-(--lastfm-color)"><br data-v-70c5cabe="" data-testid="Icon" icon="[object Object]"></span> Last.fm </h3>
  <div data-v-70c5cabe="" data-testid="lastfm-not-integrated">
    <p data-v-70c5cabe=""> Last.fm integration is not enabled. <span data-v-70c5cabe="" data-testid="lastfm-user-instruction"> Try politely asking an administrator to enable it. </span></p>
  </div>
</section>
`;

exports[`lastfmIntegration.vue > renders proper content with Last.fm integration status false, current user admin status true 1`] = `
<section data-v-70c5cabe="">
  <h3 data-v-70c5cabe="" class="text-2xl mb-2"><span data-v-70c5cabe="" class="mr-2 text-(--lastfm-color)"><br data-v-70c5cabe="" data-testid="Icon" icon="[object Object]"></span> Last.fm </h3>
  <div data-v-70c5cabe="" data-testid="lastfm-not-integrated">
    <p data-v-70c5cabe=""> Last.fm integration is not enabled. <span data-v-70c5cabe="" data-testid="lastfm-admin-instruction"> Check <a data-v-70c5cabe="" class="text-k-highlight hover:text-k-fg" href="https://docs.koel.dev/service-integrations#last-fm" target="_blank">documentation</a> for integration instructions. </span></p>
  </div>
</section>
`;

exports[`lastfmIntegration.vue > renders proper content with Last.fm integration status true, current user admin status false 1`] = `
<section data-v-70c5cabe="">
  <h3 data-v-70c5cabe="" class="text-2xl mb-2"><span data-v-70c5cabe="" class="mr-2 text-(--lastfm-color)"><br data-v-70c5cabe="" data-testid="Icon" icon="[object Object]"></span> Last.fm </h3>
  <div data-v-70c5cabe="" data-testid="lastfm-integrated">
    <p data-v-70c5cabe=""> Last.fm integration is enabled. Koel will attempt to retrieve album and artist information from Last.fm. </p>
    <p data-v-70c5cabe="">It appears that you have connected your Last.fm account as well – Perfect!</p>
    <p data-v-70c5cabe=""> Connecting Koel and your Last.fm account enables such exciting features as <a data-v-70c5cabe="" class="text-k-highlight hover:text-k-fg" href="https://www.last.fm/about/trackmymusic" rel="noopener" target="_blank">scrobbling</a>. </p>
    <div data-v-70c5cabe="" class="buttons mt-4 space-x-2">
      <!---->
      <!---->
    </div>
  </div>
</section>
`;

exports[`lastfmIntegration.vue > renders proper content with Last.fm integration status true, current user admin status true 1`] = `
<section data-v-70c5cabe="">
  <h3 data-v-70c5cabe="" class="text-2xl mb-2"><span data-v-70c5cabe="" class="mr-2 text-(--lastfm-color)"><br data-v-70c5cabe="" data-testid="Icon" icon="[object Object]"></span> Last.fm </h3>
  <div data-v-70c5cabe="" data-testid="lastfm-integrated">
    <p data-v-70c5cabe=""> Last.fm integration is enabled. Koel will attempt to retrieve album and artist information from Last.fm. </p>
    <p data-v-70c5cabe="">It appears that you have connected your Last.fm account as well – Perfect!</p>
    <p data-v-70c5cabe=""> Connecting Koel and your Last.fm account enables such exciting features as <a data-v-70c5cabe="" class="text-k-highlight hover:text-k-fg" href="https://www.last.fm/about/trackmymusic" rel="noopener" target="_blank">scrobbling</a>. </p>
    <div data-v-70c5cabe="" class="buttons mt-4 space-x-2">
      <!---->
      <!---->
    </div>
  </div>
</section>
`;
